Create a custom report for client